--- a/Backend/Infrastructure/GameLogic/MauMau.GameLogic/MauMau.GameLogic.csproj
+++ b/Backend/Infrastructure/GameLogic/MauMau.GameLogic/MauMau.GameLogic.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+  </ItemGroup>
+    
   <ItemGroup>
     <ProjectReference Include="..\..\..\Abstractions\MauMau.Abstractions.GameLogic\MauMau.Abstractions.GameLogic.csproj" />
     <ProjectReference Include="..\..\..\Application\MauMau.Application.Dto\MauMau.Application.Dto.csproj" />
