--- a/.github/workflows/test-dotnet.yml
+++ b/.github/workflows/test-dotnet.yml
@@ -12,14 +12,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 7.0.x
+
     - name: Restore dependencies
       run: dotnet restore Backend/MauMau.sln
+
     - name: Build
       run: dotnet build Backend/MauMau.sln --no-restore
+
     - name: Test
       run: dotnet test Backend/MauMau.sln --no-build --verbosity normal
